compiler/testData/diagnostics/tests/typealias/noRHS.kt
typealias<!SYNTAX!><!>

<!SYNTAX!><!>typealias A1<!SYNTAX!><!>

<!SYNTAX!><!>typealias A2 =
<!SYNTAX!><!>